fix chat scrollbars at min resolution

--- a/chat/chat.css
+++ b/chat/chat.css
@@ -6,6 +6,7 @@ body {
     position: absolute;
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 #chatBox {
